--- a/inventory/templates/inventory/inventory_base_custom.html
+++ b/inventory/templates/inventory/inventory_base_custom.html
@@ -54,6 +54,9 @@
                     <a href="{% url 'inventory:product_bulk_upload' %}" class="btn btn-success">
                         <i class="fas fa-upload"></i> رفع ملف
                     </a>
+                    <a href="{% url 'inventory:check_duplicates' %}" class="btn btn-warning">
+                        <i class="fas fa-exclamation-triangle"></i> فحص التكرارات
+                    </a>
                     {% endblock %}
                 </div>
             </div>
