--- a/inventory/templates/inventory/warehouse_list_new.html
+++ b/inventory/templates/inventory/warehouse_list_new.html
@@ -20,6 +20,9 @@
 <a href="{% url 'inventory:warehouse_location_list' %}" class="btn btn-primary btn-sm">
     <i class="fas fa-map-marker-alt"></i> مواقع التخزين
 </a>
+<a href="{% url 'inventory:warehouse_cleanup' %}" class="btn btn-info btn-sm">
+    <i class="fas fa-broom"></i> تنظيف المستودعات
+</a>
 <button type="button" class="btn btn-warning btn-sm" onclick="testDeleteButton()">
     <i class="fas fa-test"></i> اختبار الحذف
 </button>
